# lazy-editor

./: .env.selftest  .gitignore  CLAUDE.md  README.md  RESULT.md  TEST_PLAN.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci-diagnose.yml  ci.yml  release.yml
docs/: kb-deeplink-error-contract.md  knowledge-store-architecture.md  maintenance-next-plan.md  release.md
eval/: README.md
eval/round-1/: final-report.md  prompt-template.md  results.md  scorecard.csv  summary.md  tasks.md
eval/round-2/: README.md  report-addendum.md  results.md  scorecard.csv  summary.md  tasks.md
scripts/: ci-stability-baseline.mjs  test-diagnose-baseline.mjs  test-diagnose.sh  version-bump.js  version-check.js
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.selftest.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs  prompts.rs  provider.rs
src-tauri/src/commands/: ai.rs  files.rs  kb.rs  mod.rs  snapshots.rs  util.rs  web.rs
src-tauri/src/knowledge/: chunker.rs  db.rs  embedder.rs  mod.rs  search.rs
src-tauri/src/web/: extractor.rs
src/__tests__/: setup.ts
src/components/: CriticalAlert.tsx  Toast.tsx
src/hooks/: useAI.ts  useAutoSave.ts  useDebouncedValue.ts  useRecoveryDraft.ts
src/lib/: citation-notes.ts  diagnostics.ts  export-html.ts  export-markdown.ts  export-pdf.ts  find-replace.ts  integrity-batch-impact.ts  integrity-batch-plan.ts  integrity-export.ts  (+17 more)
(+71 files in other folders)
