[package]
name = "lazy-editor"
version = "0.1.0"
description = "AI-native writing workspace"
authors = ["Lazy Editor Team"]
edition = "2021"
default-run = "lazy-editor"

[lib]
name = "lazy_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled"] }
fastembed = "4"
sha2 = "0.10"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "lazy-editor-selftest"
path = "src/bin/selftest.rs"
